--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,8 @@
         {mas, ".*",
          {git, "https://github.com/ParaPhraseAGH/erlang-mas.git", {tag, "0.5.1"}}},
         {getopt, ".*",
-         {git, "https://github.com/jcomellas/getopt", {tag, "v0.8.2"}}}
+         {git, "https://github.com/jcomellas/getopt", {tag, "v0.8.2"}}},
+        {hut, ".*", {git, "https://github.com/tolbrino/hut.git", {tag, "v1.2.0"}}}
        ]
 }.
 
