Adapt to new version of MAS engine

--- a/rebar.config
+++ b/rebar.config
@@ -1,24 +1,19 @@
-{erl_opts, [debug_info,
-            warn_missing_spec,
-            warn_export_all,
-            warn_export_vars,
-            warn_shadow_vars,
-            warn_obsolete_guard,
-            warn_unused_import]}.
+{erl_opts,
+ [
+  debug_info,
+  warn_export_all,
+  warn_export_vars,
+  warn_shadow_vars,
+  warn_obsolete_guard,
+  warn_unused_import
+ ]
+}.
 
-{edoc_opts, []}.
-
-{clean_files, ["*.beam"]}.
-
-{deps_dir, "deps"}.
-
-{deps, [
-        {mas, ".*",
-         {git, "https://github.com/ParaPhraseAGH/erlang-mas.git", {tag, "0.5.1"}}},
-        {getopt, ".*",
-         {git, "https://github.com/jcomellas/getopt", {tag, "v0.8.2"}}},
-        {hut, ".*", {git, "https://github.com/tolbrino/hut.git", {tag, "v1.2.0"}}}
-       ]
+{deps,
+ [
+  {mas, {git, "https://github.com/erlang-mas/mas.git", {branch, "develop"}}},
+  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}}
+ ]
 }.
 
 {plugins, [pc]}.
@@ -35,7 +30,5 @@
 }.
 
 {port_specs,
-    [
-        {"priv/fitness_entry_nif.so", ["c_src/fitness_entry_nif.c"]}
-    ]
+ [{"priv/fitness_entry_nif.so", ["c_src/fitness_entry_nif.c"]}]
 }.
