--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
-/.project
-.rebar
-/.settings
-*.beam
-*.so
+.rebar3
+_*
+.eunit
 *.o
-deps
-
+*.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+_build
 .idea
-*.iml
-/ebin/
+rebar3.crashdump
+emas.config
+doc
+.hosts.erlang
