Setup port compiler plugin

--- a/rebar.config
+++ b/rebar.config
@@ -21,6 +21,19 @@
        ]
 }.
 
+{plugins, [pc]}.
+
+{provider_hooks,
+ [
+  {pre,
+   [
+    {compile, {pc, compile}},
+    {clean, {pc, clean}}
+   ]
+  }
+ ]
+}.
+
 {port_specs,
     [
         {"priv/fitness_entry_nif.so", ["c_src/fitness_entry_nif.c"]}
