--- a/rebar.config
+++ b/rebar.config
@@ -12,11 +12,14 @@
 {deps,
  [
   {mas, {git, "https://github.com/erlang-mas/mas.git", {branch, "develop"}}},
-  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}}
+  {exometer_fs, {git, "https://github.com/erlang-mas/exometer-fs.git", {tag, "0.1.0"}}},
+  {getopt, "0.8.2"}
  ]
 }.
 
 {plugins, [pc]}.
+
+{escript_incl_apps, [exometer_fs, getopt]}.
 
 {provider_hooks,
  [
@@ -25,9 +28,16 @@
     {compile, {pc, compile}},
     {clean, {pc, clean}}
    ]
+  },
+  {post,
+   [
+    {compile, escriptize}
+   ]
   }
  ]
 }.
+
+{post_hooks, [{compile, "cp $REBAR_BUILD_DIR/bin/emas $REBAR_ROOT_DIR/."}]}.
 
 {port_specs,
  [{"priv/fitness_entry_nif.so", ["c_src/fitness_entry_nif.c"]}]
