--- a/emas.config.example
+++ b/emas.config.example
@@ -25,9 +25,7 @@
    {mutation_range, 0.05},
    {mutation_chance, 0.75},
    {recombination_chance, 0.3},
-   {fight_number, 2},
-   {write_interval, 1000},
-   {logs_dir, "/logs/emas"}
+   {fight_number, 2}
   ]
  }
 ].
