--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 
 {deps,
  [
-  {mas, {git, "https://github.com/erlang-mas/mas.git", {branch, "develop"}}},
+  {mas, {git, "https://github.com/erlang-mas/mas.git", {branch, "test"}}},
   {getopt, "0.8.2"}
  ]
 }.
