--- a/emas.config.example
+++ b/emas.config.example
@@ -6,9 +6,9 @@
    {population_size, 100},
    {topology, mesh},
    {migration_probability, 0.05},
-   {node_migration_probability, 0},
+   {node_migration_probability, 0.0},
    {nodes_topology, mesh},
-   {write_interval, 1000},
+   {measurement_interval, 1000},
    {logs_dir, "/logs/emas"}
   ]
  },
@@ -17,14 +17,17 @@
   [
    {genetic_ops, emas_rastrigin_ops},
    {problem_size, 100},
+   {population_size, 100},
    {initial_energy, 10},
    {reproduction_threshold, 11},
+   {migration_threshold, 19},
    {reproduction_transfer, 5},
    {fight_transfer, 10},
    {mutation_rate, 0.1},
    {mutation_range, 0.05},
    {mutation_chance, 0.75},
    {recombination_chance, 0.3},
+   {migration_probability, 0.2},
    {fight_number, 2}
   ]
  }
