--- a/emas.config.example
+++ b/emas.config.example
@@ -4,7 +4,7 @@
    {population_behaviour, emas_population},
    {population_count, 2},
    {population_size, 100},
-   {topology, mesh},
+   {topology, grid},
    {migration_probability, 0.05},
    {node_migration_probability, 0.0},
    {nodes_topology, mesh},
